--- a/game/templates/game.html
+++ b/game/templates/game.html
@@ -7,6 +7,10 @@
     <!-- JavaScript -->
     <script type="text/javascript" src="{{url_for('.static', filename='js/socket.js')}}" defer></script>
     <script type="text/javascript" src="{{url_for('.static', filename='js/game.js')}}" defer></script>
+
+    <!-- Page stuff -->
+    <link rel="shortcut icon" href=""/>
+    <title>Steal the Bacon</title>
 </head>
 <body>
     <!-- game div -->
