Some basic socket stuff working, as well as a little server-side OOP

--- a/application/templates/start.html
+++ b/application/templates/start.html
@@ -39,23 +39,23 @@
     <!-- Body stuff -->
     <div id="theater" class="container">
         <h2>START</h2>
-        <form action="POST">
-            <div class="form-group">
+        <form method="POST">
+            <!-- <div class="form-group">
                 <label for="EMAIL">Sign up with a valid email</label>
                 <input id="EMAIL" type="email" class="form-control"/>
-            </div>
+            </div> -->
             <div class="form-group">
-                <label for="USERNAME">Choose a username</label>
-                <input id="USERNAME" type="text" class="form-control"/>
+                <label for="username">Choose a username</label>
+                <input type="text" name="username" class="form-control"/>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="PASSWORD">Create a password</label>
                 <input id="PASSWORD" type="password" class="form-control"/>
             </div>
             <div class="form-group">
                 <label for="password_confirm">Confirm your password</label>
                 <input id="password_confirm" type="password" class="form-control"/>
-            </div>
+            </div> -->
             <div class="form-group">
                 <button type="submit" class="btn btn-default">Submit</button>
             </div>
