--- a/application/templates/start.html
+++ b/application/templates/start.html
@@ -40,29 +40,18 @@
     <div id="theater" class="container">
         <h2>START</h2>
         <form method="POST">
-            <!-- <div class="form-group">
-                <label for="EMAIL">Sign up with a valid email</label>
-                <input id="EMAIL" type="email" class="form-control"/>
-            </div> -->
+            {{ form.csrf_token }}
             <div class="form-group">
-                <label for="username">Choose a username</label>
-                <input type="text" name="username" class="form-control"/>
+                {{ form.username.label }}
+                {{ form.username(class="form-control") }}
+                {% if form.username.errors %}
+                    <ul class="errors">{% for error in form.username.errors %}<li>{{ error }}</li>{% endfor %}</ul>
+                {% endif %}
             </div>
-            <!-- <div class="form-group">
-                <label for="PASSWORD">Create a password</label>
-                <input id="PASSWORD" type="password" class="form-control"/>
-            </div>
-            <div class="form-group">
-                <label for="password_confirm">Confirm your password</label>
-                <input id="password_confirm" type="password" class="form-control"/>
-            </div> -->
             <div class="form-group">
                 <button type="submit" class="btn btn-default">Submit</button>
             </div>
         </form>
     </div>
 </body>
-<footer>
-    <!-- Footer stuff -->
-</footer>
 </html>
