Client side game updates corresponding with class changes

--- a/application/templates/play.html
+++ b/application/templates/play.html
@@ -21,7 +21,8 @@
     <div class="container">
         <div class="row">
             <div id="dash" class="col-xs-2">
-                <p id="username">Username: {{username}}</p>
+                <p id="username">Username: {{session.username}}</p>
+                <p>Coordinates:</p>
                 <p id="x"></p>
                 <p id="y"></p>
             </div>
